test/compiler/fail/_discr_dist.ods
do x = |<4, [1,1,1]>|
